--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ button:active {
 </head>
 <body>
   <div id="header">
-    <img id="logo" src="/logo.png" alt="Logo">
+    <img id="logo" src="/dqwdqwdqwdqwd.jpg" alt="Logo">
   </div>
 
   <div id="test-container">
