--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>
   <div id="header">
-    <img id="logo" src="logo.png" alt="Logo">
+    <img id="logo" src="/dqwdqwdqwdqwd.jpg" alt="Logo">
   </div>
 
   <div id="test-container">
